--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,17 +1,31 @@
 {
   "codeLens.enable": true,
+  "diagnostic.errorSign": "✖",
+  "diagnostic.warningSign": "⚠",
+  "diagnostic.infoSign": "●",
+  "diagnostic.hintSign": "○",
   "coc.preferences.extensionUpdateCheck": "daily",
   "coc.preferences.formatOnType": true,
   "coc.preferences.willSaveHandlerTimeout": 300,
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
+    "javascriptreact",
+    "javascript.tsx",
     "typescript",
+    "typescriptreact",
+    "typescript.tsx",
     "jsonc",
     "json",
     "html",
     "css"
   ],
   "diagnostic.refreshOnInsertMode": true,
+  "eslint.run": "onSave",
+  "eslint.autoFixOnSave": true,
+  "prettier.eslintIntegration": true,
+  "prettier.trailingComma": "none",
+  "prettier.tabWidth": 2,
+  "prettier.semi": true,
   "suggest.timeout": 500,
   "suggest.triggerCompletionWait": 30,
   "suggest.defaultSortMethod": "none",
@@ -22,6 +36,7 @@
     "javascriptreact": ["javascript"]
   },
   "prettier.formatterPriority": 1,
+  "eslint.format.enable": true,
   "typescript.autoClosingTags": true,
   "typescript.format.semicolons": "insert"
 }
