feat: kitt config alias

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,6 +29,7 @@ selection_background    #979eab
 # UI
 background_opacity 0.95
 enabled_layouts splits:split_axis=horizontal
+remember_window_size no
 initial_window_width 125c
 initial_window_height 45c
 
