feat: plugin & other updates

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,11 +27,13 @@ selection_foreground    #282c34
 selection_background    #979eab
 
 # UI
-background_opacity 0.95
+cursor_shape block
+background_opacity 0.975
 enabled_layouts splits:split_axis=horizontal
 remember_window_size no
 initial_window_width 125c
 initial_window_height 45c
+linux_display_server x11
 
 # Maps
 map ctrl+alt+j next_window
