--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,12 +28,14 @@ selection_background    #979eab
 
 # UI
 cursor_shape block
+
 background_opacity 0.95
 enabled_layouts splits:split_axis=horizontal
 remember_window_size no
 initial_window_width 125c
 initial_window_height 45c
 linux_display_server x11
+shell_integration false
 
 # Maps
 map ctrl+alt+j next_window
