feat: initial macos implementation

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,6 @@
 # fonts
-font_family JetBrains Mono Medium Nerd Font Complete Mono
+font_size 15
+font_family JetBrainsMono Nerd Font Mono  
 
 disable_ligatures cursor
 
@@ -34,8 +35,6 @@ enabled_layouts splits:split_axis=horizontal
 remember_window_size no
 initial_window_width 125c
 initial_window_height 45c
-linux_display_server x11
-shell_integration false
 
 # Maps
 map ctrl+alt+j next_window
