feat: improved kitty config for ox

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # fonts
-font_size 14
-font_family JetBrainsMono Nerd Font Mono  
+font_family JetBrainsMono Nerd Font Mono 
+font_size 15
 
 disable_ligatures cursor
 
@@ -29,12 +29,14 @@ selection_background    #979eab
 
 # UI
 cursor_shape block
+shell_integration no-cursor
 
 background_opacity 0.95
 enabled_layouts splits:split_axis=horizontal
 remember_window_size no
 initial_window_width 125c
 initial_window_height 45c
+macos_titlebar_color dark
 
 # Maps
 map ctrl+alt+j next_window
