--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,8 +1,11 @@
 [user]
 	name = Miquel de Domingo
 	email = miquelddg@gmail.com 
+	signingkey = ~/.ssh/personal_github.pub
 [core]
 	editor = nvim
+[gpg]
+	format = ssh
 [github]
     user = mikededo
 [hub]
@@ -19,5 +22,3 @@
 	hist = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
 [includeIf "gitdir:~/Documents/work/"]
     path = ~/Documents/work/.gitconfig
-[includeIf "gitdir:~/Documents/personal/master/"]
-    path = ~/Documents/personal/master/.gitconfig
