--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,6 +2,8 @@
 	name = Miquel de Domingo
 	email = miquelddg@gmail.com 
 	signingkey = ~/.ssh/personal_github.pub
+[commit]
+	gpgsign = true
 [core]
 	editor = nvim
 [gpg]
