feat(kitty): improved kitty conf now that it is stowed

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,9 @@
 # fonts
-font_family JetBrainsMono Nerd Font Mono 
 font_size 15
+font_family JetBrainsMonoMedium Nerd Font Mono Medium
+bold_font JetBrainsMono Nerd Font Mono Medium 
+italic_font JetBrainsMono Nerd Font Mono Medium 
+bold_italic_font JetBrainsMono Nerd Font Mono Medium 
 
 disable_ligatures cursor
 
@@ -31,12 +34,20 @@ selection_background    #979eab
 cursor_shape block
 shell_integration no-cursor
 
-background_opacity 0.95
 enabled_layouts splits:split_axis=horizontal
 remember_window_size no
 initial_window_width 125c
 initial_window_height 45c
 macos_titlebar_color dark
+
+## Tab bar
+tab_bar_style powerline
+tab_powerline_style round
+tab_title_template "{activity_symbol}{index}"
+active_tab_background #f67451
+active_tab_foreground #ffffff
+inactive_tab_background #585e63
+inactive_tab_foreground #ffffff
 
 # Maps
 map ctrl+alt+j next_window
