feat(starship): add `git_branch` name truncation

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -64,6 +64,7 @@ style = "208"
 format = "[$symbol$branch(:$remote_branch)]($style) "
 style = "fg:35"
 symbol = "\uF126 "
+truncation_length = 24
 
 [git_state]
 am = "am"
