feat(kitty): minor ui improvements

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ disable_ligatures cursor
 
 # Theme
 foreground              #e6e6e6
-background              #282c34
+background              #1e222a
 cursor                  #ffffff
 color0                  #36393e
 color1                  #e22c39
@@ -41,13 +41,14 @@ initial_window_height 45c
 macos_titlebar_color dark
 
 ## Tab bar
+tab_bar_edge top
 tab_bar_style powerline
 tab_powerline_style round
 tab_title_template "{activity_symbol}{index}"
 active_tab_background #f67451
 active_tab_foreground #ffffff
-inactive_tab_background #585e63
-inactive_tab_foreground #ffffff
+inactive_tab_background #373b43
+inactive_tab_foreground #bbc2cf
 
 # Maps
 map ctrl+alt+j next_window
