--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # fonts
 font_size 14
-font_family JetBrainsMonoMedium Nerd Font Mono Medium
+font_family JetBrainsMono Nerd Font Mono Regular
 bold_font JetBrainsMono Nerd Font Mono Medium 
 italic_font JetBrainsMono Nerd Font Mono Medium 
 bold_italic_font JetBrainsMono Nerd Font Mono Medium 
