--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -8,7 +8,6 @@ $git_state\
 $git_status\
 $character\
 """
-
 right_format = """
 $golang\
 $rust\
@@ -19,6 +18,7 @@ $kubernetes\
 $memory_usage\
 $time\
 """
+command_timeout = 1500
 
 # Custom prompt
 add_newline = false
