--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,8 +22,10 @@
     rebase = true
 [alias]
     hist = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
-[includeIf "gitdir:~/Documents/work/"]
-    path = ~/Documents/work/.gitconfig
+[includeIf "gitdir:~/Documents/work/source.xing.com/"]
+    path = ~/Documents/work/source.xing.com/.gitconfig
+[includeIf "gitdir:~/Documents/work/github.com/"]
+    path = ~/Documents/work/github.com/.gitconfig
 [rerere]
 	autoUpdate = true
 	enabled = true
