--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,7 +6,7 @@
     gpgsign = true
 [core]
     editor = nvim
-    excludesfile = .gitignore_global
+    excludesfile = ~/git/.gitignore_global
 [gpg]
     format = ssh
 [github]
