--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,7 @@
 [user]
     name = Miquel de Domingo
     email = miquelddg@gmail.com 
-    signingkey = ~/.ssh/personal_github.pub
+    signingkey = ~/.ssh/github_ssh.pub
 [commit]
     gpgsign = true
 [core]
@@ -23,10 +23,8 @@
     rebase = true
 [alias]
     hist = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
-[includeIf "gitdir:~/Documents/work/source.xing.com/"]
-    path = ~/Documents/work/source.xing.com/.gitconfig
-[includeIf "gitdir:~/Documents/work/github.com/"]
-    path = ~/Documents/work/github.com/.gitconfig
+[includeIf "gitdir:~/Documents/work/"]
+    path = ~/Documents/work/.gitconfig
 [rerere]
 	autoUpdate = true
 	enabled = true
