fix(tmux): correct shortcut

--- a/tmux/.config/tmux/tmux.reset.conf
+++ b/tmux/.config/tmux/tmux.reset.conf
@@ -3,7 +3,7 @@
 # Now reinsert all the regular tmux keys
 bind ^X lock-server
 bind ^C new-window -c "$HOME"
-bind ^N new-window "#{pane_current_path}"
+bind ^N new-window -c "#{pane_current_path}"
 bind ^D detach
 bind * list-clients
 
